applications/kubernetes/traefik/traefik.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-dashboard
  namespace: kube-system
spec:
  selector:
    app.kubernetes.io/name: traefik
  ports:
    - port: 8080
      targetPort: 8080
      name: dashboard

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-dashboard
  namespace: kube-system
  annotations:
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
spec:
  tls:
    - hosts:
        - traefik.avigdol.com
      secretName: traefik-dashboard-tls
  rules:
    - host: traefik.avigdol.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: traefik-dashboard
                port:
                  number: 8080
